# Infrastruture-Project

./: .gitignore  README.md  atlantis.yaml
environments/: terraform.tfstate  terragrunt.hcl
environments/prod-docker/: main.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  terragrunt.hcl  variable.tf
environments/prod-gateway/: main.tf  terraform.tfstate  terraform.tfstate.backup  terragrunt.hcl  variable.tf
environments/prod-infra/: .terraform.lock.hcl  main.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  terragrunt.hcl  variable.tf
environments/prod-manage/: main.tf  terraform.tfstate  terraform.tfstate.backup  terragrunt.hcl
environments/prod-social/: .terraform.lock.hcl  main.tf  terraform.tfstate  terraform.tfstate.backup  (+3 more)
infra-cli/: .gitignore  Makefile  go.mod  go.sum
projects/: add_cache_mounts.sh  scripts
projects/Whatsapp/whatsapp-backend/: .env  Cargo.toml  Dockerfile  configuration-test.yaml  entrypoint.sh  test_script.sh
projects/Whatsapp/whatsapp-backend/migrations/: 20260611155718_create_tables.sql  20260613090000_add_media_to_messages.sql  20260614124039_alter_tables_2.sql
projects/Whatsapp/whatsapp-backend/src/: lib.rs  main.rs
projects/Whatsapp/whatsapp-backend/src/configurations/: mod.rs
projects/Whatsapp/whatsapp-backend/src/database/: mod.rs
projects/Whatsapp/whatsapp-backend/src/routes/: classes.rs  dto.rs  handlers.rs  mod.rs
projects/Whatsapp/whatsapp-backend/tests/: test_home.rs  test_others.rs  test_room.rs  test_users.rs
projects/Whatsapp/whatsapp-backend/tests/common/: mod.rs
(+599 files in other folders)
